crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__no_lines_before_with_empty_sections.py_no_lines_before_with_empty_sections.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
no_lines_before_with_empty_sections.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from __future__ import annotations
2 | | from typing import Any
3 | | from . import my_local_folder_object
  | |____________________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1 1 | from __future__ import annotations
2 2 | from typing import Any
  3 |+
3 4 | from . import my_local_folder_object
