crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__no_standard_library_no_standard_library.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
no_standard_library.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from __future__ import annotations
2 | |
3 | | import os
4 | | import django.settings
5 | | from library import foo
6 | | import pytz
7 | |
8 | | from . import local
9 | | import sys
  | |__________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1  1  | from __future__ import annotations
2  2  | 
3     |-import os
4  3  | import django.settings
5  4  | from library import foo
   5  |+import os
6  6  | import pytz
   7  |+import sys
7  8  | 
8  9  | from . import local
9     |-import sys
