crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__no_wrap_star.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
no_wrap_star.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | from .subscription import * # type: ignore  # some very long comment explaining why this needs a type ignore
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1   |-from .subscription import * # type: ignore  # some very long comment explaining why this needs a type ignore
  1 |+from .subscription import *  # type: ignore  # some very long comment explaining why this needs a type ignore
