crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__order_by_type_with_custom_classes_order_by_type_with_custom_classes.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
order_by_type_with_custom_classes.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from sklearn.svm import func, SVC, CONST, Klass
2 | | from subprocess import N_CLASS, PIPE, Popen, STDOUT
3 | | from module import CLASS, Class, CONSTANT, function, BASIC, Apple
4 | | from torch.nn import SELU, AClass, A_CONSTANT
  | |_____________________________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1   |-from sklearn.svm import func, SVC, CONST, Klass
2   |-from subprocess import N_CLASS, PIPE, Popen, STDOUT
3   |-from module import CLASS, Class, CONSTANT, function, BASIC, Apple
4   |-from torch.nn import SELU, AClass, A_CONSTANT
  1 |+from subprocess import PIPE, STDOUT, N_CLASS, Popen
  2 |+
  3 |+from module import BASIC, CONSTANT, Apple, CLASS, Class, function
  4 |+from sklearn.svm import CONST, Klass, SVC, func
  5 |+from torch.nn import A_CONSTANT, AClass, SELU
