crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__order_by_type_with_custom_constants.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
order_by_type_with_custom_constants.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from sklearn.svm import XYZ, func, variable, Const, Klass, constant
2 | | from subprocess import First, var, func, Class, konst, A_constant, Last, STDOUT
  | |_______________________________________________________________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1   |-from sklearn.svm import XYZ, func, variable, Const, Klass, constant
2   |-from subprocess import First, var, func, Class, konst, A_constant, Last, STDOUT
  1 |+from subprocess import STDOUT, A_constant, Class, First, Last, func, konst, var
  2 |+
  3 |+from sklearn.svm import XYZ, Const, Klass, constant, func, variable
